Last Part Of Template

--- a/index.html
+++ b/index.html
@@ -130,6 +130,85 @@
       </div>
     </div>
     <!-- End Mona Lisa -->
-
+        <!-- Start Paintings -->
+        <div class="Paintings" id="Paintings">
+          <div class="container">
+            <h2 class="special-heading">Paintings</h2>
+            <p>the most famous Paintings in the world.</p>
+            <div class="Paintings-content">
+              <div class="card">
+                <img src="images/Colored Guernica.jpeg" alt="" />
+                <div class="info">
+                  <h3>Guernica</h3>
+                  <p>by Pablo Picasso (1937) is a black-and-white painting depicting the horrors of war, inspired by the bombing of Guernica during the Spanish Civil War. 
+                    It stands as a powerful anti-war symbol, capturing the pain and chaos inflicted on innocent lives.</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/The Starry Night.jpeg" alt="" />
+                <div class="info">
+                  <h3>The Starry Night</h3>
+                  <p>by Vincent van Gogh (1889) is a famous painting that depicts a swirling night sky over a quiet village, filled with vibrant, dreamlike energy. 
+                    It reflects Van Gogh's emotional state and his fascination with the natural world.</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="images/The Last Supper.jpeg" alt="" />
+                <div class="info">
+                  <h3>The Last Supper</h3>
+                  <p>by Leonardo da Vinci (1490s) is a renowned mural depicting Jesus and his disciples during the final meal before his crucifixion. 
+                    It captures the dramatic moment when Jesus announces that one of his disciples will betray him.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Paintings -->
+        <!-- Start Favorite -->
+        <div class="Favorite">
+          <div class="container">
+            <h2 class="special-heading">Favorite</h2>
+            <p>Girl with a Pearl Earring</p>
+            <div class="Favorite-content">
+              <div class="image">
+                <img src="images/Girl with a Pearl Earring.jpeg" alt="" />
+              </div>
+              <div class="text">
+                <p>
+                  by Johannes Vermeer (1665) is a famous portrait of a young girl wearing an exotic headscarf and a large pearl earring. 
+                  The painting is known for its captivating simplicity and the enigmatic expression of the girl, 
+                  often referred to as the "Mona Lisa of the North.
+                </p>
+                <hr />
+                <p>
+                  Vermeer is known for his masterful use of light and color, and this painting showcases his ability to capture subtle emotions and delicate details. 
+                  The piece has inspired various interpretations and adaptations, including novels and films, making it a significant work in art history.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Favorite -->
+        <!-- Start Contact -->
+        <div class="contact">
+          <div class="container">
+            <h2 class="special-heading">Contact</h2>
+            <p>We are born to create</p>
+            <div class="info">
+              <p class="label">Feel free to drop Me a line at:</p>
+              <a href="mailto:aymanmahdy737@gmail.com?subject=Contact" class="link">aymanmahdy737@gmail.com</a>
+              <div class="social">
+                Find Me On Social Networks
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-linkedin"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Contact -->
+        <!-- Start Footer -->
+        <div class="footer">&copy; 2022 <span>ArtShow</span> All Right Reserved</div>
+        <!-- End Footer -->
   </body>
 </html>
